#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(vhostgen, 1.0, sjk@ankeborg.nu)
AC_CONFIG_SRCDIR([vhostgen.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# We use the following function to check for mysql libs
# I believe this function was written by Michiel van Baak.
AC_DEFUN([AC_CHECK_MYSQLR],[
    AC_SUBST(MYSQL_CFLAGS)
    AC_SUBST(MYSQL_LIBS)
    AC_PATH_PROG(mysqlconfig,mysql_config)
    if test [ -z "$mysqlconfig" ]
    then
        AC_MSG_ERROR([mysql_config executable not found])
    else
        AC_MSG_CHECKING(mysql libraries)
        MYSQL_LIBS=`${mysqlconfig} --libs`
        AC_MSG_RESULT($MYSQL_LIBS)
        AC_MSG_CHECKING(mysql includes)
        MYSQL_CFLAGS=`${mysqlconfig} --cflags`
        AC_MSG_RESULT($MYSQL_CFLAGS)
    fi
])

# Checks for libraries.
AC_CHECK_MYSQLR
# FIXME: Replace `main' with a function in `-lcrypto':
AC_CHECK_LIB([crypto], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lmysqlclient':
AC_CHECK_LIB([mysqlclient], [main])
# FIXME: Replace `main' with a function in `-lssl':
AC_CHECK_LIB([ssl], [main])
# FIXME: Replace `main' with a function in `-lz':
AC_CHECK_LIB([z], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([strchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
